--- a/web_back/login.html
+++ b/web_back/login.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/iconfont.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+
+    <!-- 链接bootstrap的css -->
+    <link rel="stylesheet" href="./js/bootstrap/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -31,6 +34,42 @@
 
     </div> 
 
+    <!-- 引入jQuery文件 -->
+    <script src="./js/jquery-1.12.4.min.js"></script>
+    <!-- 引入bootstrap的jQuery文件 -->
+    <script src="./js/bootstrap/js/bootstrap.min.js"></script>
+    <script>
+        /* 做了两件事:1.登录功能的完成  2.美化弹出框 */
+        // 入口函数
+        $(function(){
+            // 1.给登录按钮点击事件
+            $('.input_sub').on('click',function(e){
+                // 阻止事件的默认跳转行为
+                e.preventDefault();
+                // 2.获取用户名和密码
+                var userName = $('.input_txt').val();
+                var password = $('.input_pass').val();
+                // 判断一下用户名和密码是否为空
+                if(userName == '' || password == '') {
+                    alert('用户名或密码为空');
+                }
+                // 3.发送ajax请求--请求登录
+                $.ajax({
+                    type:"post",
+                    url:"http://localhost:8000/admin/login",
+                    data:{user_name:userName,password:password},
+                    success:function(res) {
+                        if(res.code == 200) {
+                            // 表示登录成功--跳到主页
+                            window.location.href = 'index.html';
+                        } else {
+                            alert(res.msg);
+                        }
+                    }
+                })
+            })
+        })
+    </script>
 </body>
 
 </html>
