--- a/web_back/article_category.html
+++ b/web_back/article_category.html
@@ -80,56 +80,146 @@
         </div>
     </div>
 
-    <div class="modal fade" id="addModal" >
+    <div class="modal fade" id="addModal">
         <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
-              <h4 class="modal-title">新增分类</h4>
-            </div>
-            <div class="modal-body">
-              <form>
-                <div class="form-group">
-                  <label for="recipient-name" class="control-label">分类名称:</label>
-                  <input type="text" class="form-control" id="recipient-name">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+                    <h4 class="modal-title">新增分类</h4>
                 </div>
-                <div class="form-group">
-                  <label for="message-text" class="control-label">分类别名:</label>
-                  <input type="text" class="form-control" id="recipient-name">
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="recipient-name" class="control-label">分类名称:</label>
+                            <input type="text" class="form-control cate_name" id="recipient-name">
+                        </div>
+                        <div class="form-group">
+                            <label for="message-text" class="control-label">分类别名:</label>
+                            <input type="text" class="form-control cate_slug" id="recipient-slug">
+                        </div>
+                    </form>
                 </div>
-              </form>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" id="model_shutoff">关闭</button>
+                    <button type="button" class="btn btn-primary" id="model_add">新增</button>
+                </div>
             </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" id="model_shutoff">关闭</button>
-              <button type="button" class="btn btn-primary" id="model_add">新增</button>
-            </div>
-          </div>
         </div>
-      </div>
+    </div>
 
-      <script>
-          $('#addModal').modal({
-            show:false,
-            backdrop:false
-          });
+    <script>
+        $('#addModal').modal({
+            show: false,
+            backdrop: false
+        });
 
-          $('#model_shutoff').click(function(){
+        $('#model_shutoff').click(function () {
             alert('shutoff');
             $('#addModal').modal('hide');
-          });
+        });
 
-          $('#model_add').click(function(){
-            alert('add');
-            $('#addModal').modal('hide');
-          });
-
-          $('.category_table').delegate('a','click',function(){
-              if($(this).hasClass('btn-info')){
+        $('.category_table').delegate('a', 'click', function () {
+            if ($(this).hasClass('btn-info')) {
                 $('#addModal .modal-title').html('修改分类名称');
                 $('#addModal').modal('show');
-              }
-          })      
-      </script>
+            }
+        })      
+    </script>
+
+    <!-- 导入模板 -->
+    <script src="./js/template-web.js"></script>
+    <!-- 准备模板 -->
+    <script id="tmp_cate" type="text/html">
+        <!-- 这个模板用来创建tr的 -->
+        {{each data}}
+            <tr>
+                <td>{{$value.name}}</td>
+                <td>{{$value.slug}}</td>
+                <td class="text-center">
+                    <a href="javascript:editTr({&quot;id&quot;:&quot;1&quot;,&quot;slug&quot;:&quot;uncategorized&quot;,&quot;name&quot;:&quot;未分类&quot;});"
+                        class="btn btn-info btn-xs">编辑</a>
+                    <a href="javascript:deleteTr( 1 );" class="btn btn-danger btn-xs">删除</a>
+                </td>
+            </tr>
+        {{/each}}
+    </script>
+
+    <!--  -->
+    <script id="tmp_add" type="text/html">
+        <tr>
+            <td>{{catename}}</td>
+            <td>{{cateslug}}</td>
+            <td class="text-center">
+                <a href="javascript:editTr({&quot;id&quot;:&quot;1&quot;,&quot;slug&quot;:&quot;uncategorized&quot;,&quot;name&quot;:&quot;未分类&quot;});"
+                    class="btn btn-info btn-xs">编辑</a>
+                <a href="javascript:deleteTr( 1 );" class="btn btn-danger btn-xs">删除</a>
+            </td>
+        </tr>
+    </script>
+
+    <script>
+        //   入口函数
+        $(function () {
+            function getData() {
+                $.get({
+                    url: "http://localhost:8000/admin/category_search",
+                    success: function (res) {
+                        // 因为获取的数据类别不止一个,是一个数组,所以用模板--有几个数组就创建几个tr
+                        var result = template('tmp_cate', res);
+                        $('tbody').html(result);
+                    }
+                })
+            }
+            // 1.这个页面一打开就发送请求---获取真实的数据--文章类别
+            getData();
+
+            // 2.给新增按钮添加点击事件
+            $('#model_add').on('click', function (e) {
+                e.preventDefault();
+
+                // 获取输入的数据
+                var catename = $('.cate_name').val().trim();
+                var cateslug = $('.cate_slug').val().trim();
+                $.post({
+                    url: "http://localhost:8000/admin/category_add",
+                    data: { name: catename, slug: cateslug },
+                    success: function (res) {
+                        if (res.code == 200) {
+                            // 表示添加成功--添加成功后做一些事情
+                            // 1.刷新页面
+                            // location.reload();
+
+                            // 2.重新渲染一下--发送ajax请求
+                            // getData();
+
+                            // 3.把新增的添加到tbody中---新建一个tr
+                            var obj = {
+                                'catename': catename,
+                                'cateslug': cateslug
+                            };
+
+                            // 添加完成之后清空输入的数据---既下次添加的时候输入框是空的
+                            $('.cate_name').val('');
+                            $('.cate_slug').val('');
+
+                            var newTr = template('tmp_add', obj);
+                            $('tbody').append(newTr);
+
+                            $('#recipient-name').val('');
+                            $('#recipient-slug').val('');
+                        }
+                    }
+                })
+
+                // // 添加完成之后清空输入的数据---既下次添加的时候输入框是空的
+                $('#recipient-name').val('');
+                $('#recipient-slug').val('');
+
+                // 隐藏模态框
+                $('#addModal').modal('hide');
+            })
+        })
+    </script>
 
 </body>
 
