--- a/web_back/article_list.html
+++ b/web_back/article_list.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="css/iconfont.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/jquery-1.12.4.min.js"></script>
+    <!-- 引入分页插件的js文件 -->
+    <script src="./twbs-pagination-master/jquery.twbsPagination.js"></script>
+
 </head>
 
 <body>
@@ -287,7 +290,7 @@
         {{/each}}
     </script>
     <!-- 准备模板--文章列表 -->
-    <script id="art-list" type="text/html" >
+    <script id="art-list" type="text/html">
         {{each data v}}
             <tr>
                 <td>{{v.title}}</td>
@@ -319,15 +322,15 @@
                 }
             })
 
-            // 需求:点击筛选按钮选出所有符合条件的文章--调用一下获取文章的数据的函数
+            // 2需求:点击筛选按钮选出所有符合条件的文章--调用一下获取文章的数据的函数
             $('#btnSearch').on('click', function (e) {
                 e.preventDefault();
-                getAllArt(3);//我想看第三页
+                getAllArt(1);//点击筛选的时候显示第一页
             })
 
 
             // 一进入文章列表页面,就显示所有的文章--所以获取文章的代码封装成一个函数    
-            function getAllArt(myPage){
+            function getAllArt(myPage) {
                 // 获取文章类别和文章状态
                 var category = $('#selCategory').val();//获取文章类别id
                 var selStatus = $('#selStatus').val();//获取文章状态(草稿或者已发布);
@@ -346,7 +349,7 @@
                         if (res.code == 200) {
                             // 表示搜索文章成功--把搜索出来的数据渲染到页面上
                             // 调用模板
-                            var result = template('art-list',res);
+                            var result = template('art-list', res);
                             $('tbody').html(result);
                         }
                     }
@@ -354,9 +357,26 @@
             }
 
 
-            // 需求:一进入这个文章列表这个页面就显示获取的文章--触发筛选按钮的点击事件
+            // 3需求:一进入这个文章列表这个页面就显示获取的文章--触发筛选按钮的点击事件
             $('#btnSearch').trigger('click');
-            
+
+
+            // 需求:我们的分页是用分页插件做的
+            $('.pagination').twbsPagination({
+                totalPages: 35,//总页数
+                visiblePages: 7,//最大可见页数
+                first:'首页',
+                prev:'上一页',
+                next:'下一页',
+                last:'尾页',
+                onPageClick: function (event, page) {   //onePageClick就是点击页签的回调函数
+                    // console.log(event); //点击的时候触发的事件对象
+                    // console.log(page);  //点击的页码数
+
+                    getAllArt(page);//点击那一页,就显示那一页的数据
+                }
+            });
+
         })
     </script>
 </body>
