--- a/web_back/article_list.html
+++ b/web_back/article_list.html
@@ -328,6 +328,26 @@
                 getAllArt(1);//点击筛选的时候显示第一页
             })
 
+            // 声明一个变量--记录获取的总页数
+            var myTotalPage = 10;
+
+            //分页插件的高级使用---根据查询出来的数据---动态的生成页码数
+            var $pagination = $('.pagination');
+            var defaultOpts = {
+                totalPages: 35,//总页数
+                visiblePages: 7,//最大可见页数
+                first: '首页',
+                prev: '上一页',
+                next: '下一页',
+                last: '尾页',
+                onPageClick: function (event, page) {   //onePageClick就是点击页签的回调函数
+                    // console.log(event); //点击的时候触发的事件对象
+                    // console.log(page);  //点击的页码数
+
+                    getAllArt(page);//点击那一页,就显示那一页的数据
+                }
+            };
+            $pagination.twbsPagination(defaultOpts);
 
             // 一进入文章列表页面,就显示所有的文章--所以获取文章的代码封装成一个函数    
             function getAllArt(myPage) {
@@ -351,7 +371,24 @@
                             // 调用模板
                             var result = template('art-list', res);
                             $('tbody').html(result);
+
+
+                            // // 因为总页数在发送ajax请求成功后返回的数据里,所以这个重绘页码条的数据写在写在这个成功的success方法中
+                            var totalPages = res.totalPage;    //拿到新的总页数
+                            if (myTotalPage != totalPages) { //如果获取的新的页码数不等于当前的总页码数
+                                myTotalPage = totalPages;
+                                var currentPage = $pagination.twbsPagination('getCurrentPage');//点击的当前页
+                                $pagination.twbsPagination('destroy');
+                                //在调用这个方法的时候,内部会自动调用分页插件的 onPageClick方法,在 onPageClick方法中有会调用getAllArt方法,这样就会死循环了
+                                $pagination.twbsPagination($.extend({}, defaultOpts, {
+                                    startPage: 1,//修改开始页为第一页
+                                    totalPages: totalPages
+                                }));
+                            }
+
                         }
+
+                        console.log(res);
                     }
                 })
             }
@@ -359,23 +396,6 @@
 
             // 3需求:一进入这个文章列表这个页面就显示获取的文章--触发筛选按钮的点击事件
             $('#btnSearch').trigger('click');
-
-
-            // 需求:我们的分页是用分页插件做的
-            $('.pagination').twbsPagination({
-                totalPages: 35,//总页数
-                visiblePages: 7,//最大可见页数
-                first:'首页',
-                prev:'上一页',
-                next:'下一页',
-                last:'尾页',
-                onPageClick: function (event, page) {   //onePageClick就是点击页签的回调函数
-                    // console.log(event); //点击的时候触发的事件对象
-                    // console.log(page);  //点击的页码数
-
-                    getAllArt(page);//点击那一页,就显示那一页的数据
-                }
-            });
 
         })
     </script>
